fixed white spaces

--- a/style.css
+++ b/style.css
@@ -7,26 +7,22 @@
   overflow-x: hidden;
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
   font-family: 'Muli', sans-serif;
+  background-color: #f9f9f9;
 }
 
 h1 {
   margin: 0;
 }
 
-.container {
+.main-container {
   width: 100%;
   display: flex;
   position: relative;
 }
-.container > .left-change,
-.container > .right-change {
+.main-container > .left-change,
+.main-container > .right-change {
   position: absolute;
   height: 120px;
   width: 120px;
@@ -40,54 +36,53 @@ h1 {
   transition: 0.3s all;
 }
 
-.container > .left-change {
+.main-container > .left-change {
   left: -90px;
   background-color: #e0e0e0;
 }
 
-.container > .right-change {
+.main-container > .right-change {
   left: 0;
   right: -90px;
   margin-left: auto;
   background-color: #2463e1;
 }
 
-.container > .left-change:hover {
+.main-container > .left-change:hover {
   background-color: #bebebe;
   left: -60px;
 }
 
-.container > .right-change:hover {
+.main-container > .right-change:hover {
   background-color: #1e53bd;
   right: -60px;
 }
 
-.container > .left-change:hover > i,
-.container > .right-change:hover > i {
+.main-container > .left-change:hover > i,
+.main-container > .right-change:hover > i {
   display: initial;
 }
 
-.container > .left-change > i,
-.container > .right-change > i {
+.main-container > .left-change > i,
+.main-container > .right-change > i {
   position: relative;
   top: 35%;
   color: #fff;
   font-size: 36px;
   display: none;
 }
-.container > .left-change > i {
+.main-container > .left-change > i {
   left: 20%;
 }
 
-.container > .right-change > i {
+.main-container > .right-change > i {
   right: 20%;
 }
 
 /* --------------------- Left Container ------------------------- */
-.container > .left-container {
+.main-container > .left-container {
   /* width: 70%; */
   flex-basis: 70%;
-  background-color: #f9f9f9;
   margin: 2em;
 }
 
@@ -99,7 +94,7 @@ h1 {
 }
 
 .left-container > .stepper > p {
-  margin-right: 4px;
+  margin: 2px 4px;
   font-size: 12px;
   font-weight: 700;
   letter-spacing: 1px;
@@ -108,8 +103,8 @@ h1 {
 .left-container > .stepper > div {
   border-radius: 50%;
   background-color: #000;
-  height: 5px;
-  width: 5px;
+  height: 6px;
+  width: 6px;
   margin-right: 5px;
   margin-left: 5px;
 }
@@ -131,11 +126,19 @@ h1 {
 
 .center-div > .center-form > h1 {
   margin-bottom: 1em;
+  overflow: hidden;
 }
 
 .center-div > .center-form > p > a {
   font-weight: 700;
 }
+
+/* .center-div > .center-form > #form1 {
+  display: none;
+} */
+/* .center-div > .center-form > #form2 {
+  display: none;
+} */
 
 .center-div > .center-form > form {
   display: flex;
@@ -144,18 +147,20 @@ h1 {
 }
 
 .center-div > .center-form > form > input {
-  padding: 10px 16px;
+  padding: 12px 18px;
   margin-bottom: 2em;
   font-size: 15px;
-  border: 1px solid rgb(212, 212, 212);
+  background-color: #f9f9f9;
+  border: 1px solid rgb(235, 234, 234);
 }
 
 .center-div > .center-form > form > select {
-  padding: 10px 16px;
+  padding: 12px 18px;
   margin-bottom: 2em;
   font-size: 16px;
-  border: 1px solid rgb(212, 212, 212);
+  border: 1px solid rgb(235, 234, 234);
   color: grey;
+  background-color: #f9f9f9;
   cursor: pointer;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -176,9 +181,10 @@ h1 {
 }
 .center-div > .center-form > form > .input-icon > input {
   width: 100%;
-  padding: 10px 16px;
+  padding: 12px 18px;
   font-size: 15px;
-  border: 1px solid rgb(212, 212, 212);
+  background-color: #f9f9f9;
+  border: 1px solid rgb(235, 234, 234);
 }
 .center-div > .center-form > form > .input-icon > div {
   margin: 1em 0em 2em 0em;
@@ -187,13 +193,38 @@ h1 {
 }
 
 .center-div > .center-form > form > button {
-  padding: 10px 16px;
+  padding: 12px 18px;
   cursor: pointer;
-  background-color: #ededed;
-  border: 1px solid rgb(212, 212, 212);
+  background-color: #e4e4e4;
+  border: none;
   font-size: 14px;
   font-weight: 700;
   color: #aaaaaa;
+}
+
+/* Form 2 CSS */
+.center-div > .center-form > #form2 > .form-group {
+  padding-top: px;
+  /* border: 2px solid; */
+  position: relative;
+  margin-bottom: 1.5em;
+}
+.center-div > .center-form > #form2 > .form-group > label {
+  position: absolute;
+  top: -5px;
+  left: 20px;
+  font-size: 14px;
+  color: grey;
+  background-color: white;
+}
+.center-div > .center-form > #form2 > .form-group > input {
+  margin-left: -2px;
+  padding: 10px 16px;
+  font-size: 15px;
+  border: 1px solid rgb(212, 212, 212);
+}
+.center-div > .center-form > #form2 > .form-group > select {
+  margin-left: -2px;
 }
 
 .center-div > .center-form > .terms-div {
@@ -216,7 +247,7 @@ h1 {
 }
 
 /* --------------------- Right Container ------------------------- */
-.container > .right-container {
+.main-container > .right-container {
   background-color: #286efa;
   flex-basis: 30%;
   /* width: 30%; */
@@ -224,26 +255,29 @@ h1 {
 
 .right-container > .center-div {
   width: 80%;
-  margin: 50% auto 0em auto;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 40%;
   color: #fff;
 }
 .right-container > .center-div > h1 {
   margin-bottom: 1em;
+  overflow: hidden;
   text-align: center;
 }
 
 /* --------------- Media Queries ---------------- */
 @media screen and (max-width: 650px) {
-  .container {
+  .main-container {
     width: 100%;
     flex-direction: column-reverse;
   }
 
-  .container > .right-container > .center-div {
+  .main-container > .right-container > .center-div {
     margin: 2em auto 4em auto;
   }
 
-  .container > .right-change {
+  .main-container > .right-change {
     background-color: #e0e0e0;
   }
 }
